--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>N-of-1 Wearable Data Analysis</title>
+  <title>Cyclops - Advanced Data Analysis</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <div id="content" style="display: none;">
-    <h1>N-of-1 Wearable Data Analysis</h1>
-    <p>This analysis shows the weekly summary of wearable data, including steps, heart rate, and sleep patterns.</p>
-    <div id="charts">
-      <canvas id="stepsChart"></canvas>
-      <canvas id="heartRateChart"></canvas>
-      <canvas id="sleepChart"></canvas>
-    </div>
-  </div>
+  <header>
+    <h1>Cyclops</h1>
+    <p>An advanced framework for time-series data analysis and forecasting.</p>
+  </header>
+
+  <main>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>Cyclops is designed for healthcare and other critical domains where time-series data plays a pivotal role. Explore its powerful features, easy integration, and high performance.</p>
+    </section>
+
+    <section id="features">
+      <h2>Key Features</h2>
+      <ul>
+        <li>Efficient time-series forecasting algorithms</li>
+        <li>Seamless integration with modern data pipelines</li>
+        <li>Comprehensive visualization tools</li>
+      </ul>
+    </section>
+
+    <section id="repository-link">
+      <h2>Explore the Code</h2>
+      <p>To dive into the code and contribute, visit the official GitHub repository.</p>
+      <a href="https://github.com/vectorinstitute/cyclops" target="_blank" class="button">View GitHub Repository</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Cyclops Project by Vector Institute</p>
+  </footer>
 </body>
 </html>
