--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyclops - Advanced Data Analysis</title>
+  <title>Maternal health Aggregated Trends can be Misleading: The power of N-of-1 Level Wearable Data Analysis for Personalized Pregnancy Monitoring</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Cyclops</h1>
-    <p>An advanced framework for time-series data analysis and forecasting.</p>
+    <h1>Our papeer</h1>
+    <p>An advanced statistical framework for case study and individual variability analysis.</p>
   </header>
 
   <main>
     <section id="overview">
       <h2>Overview</h2>
-      <p>Cyclops is designed for healthcare and other critical domains where time-series data plays a pivotal role. Explore its powerful features, easy integration, and high performance.</p>
+      <p>Maternal health aggregated vs individual level analysis</p>
     </section>
 
     <section id="features">
       <h2>Key Features</h2>
       <ul>
-        <li>Efficient time-series forecasting algorithms</li>
-        <li>Seamless integration with modern data pipelines</li>
-        <li>Comprehensive visualization tools</li>
+        <li>Wearable data N-of-1 level analysis</li>
       </ul>
     </section>
 
     <section id="repository-link">
       <h2>Explore the Code</h2>
       <p>To dive into the code and contribute, visit the official GitHub repository.</p>
-      <a href="https://github.com/vectorinstitute/cyclops" target="_blank" class="button">View GitHub Repository</a>
+      <a href="https://github.com/Tinbeh97/N-of-1-Level-Wearable-Data-Analysis" target="_blank" class="button">View GitHub Repository</a>
     </section>
   </main>
 
