--- a/index.html
+++ b/index.html
@@ -3,37 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maternal health Aggregated Trends can be Misleading: The power of N-of-1 Level Wearable Data Analysis for Personalized Pregnancy Monitoring</title>
+  <title>N-of-1 Wearable Data Analysis</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <style>
+    /* Add basic styling directly for convenience */
+    body {
+      font-family: 'Arial', sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      background-color: #f9f9f9;
+    }
+
+    header {
+      background: linear-gradient(to right, #4caf50, #81c784);
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
+
+    main {
+      padding: 2rem 1rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #4caf50;
+      display: inline-block;
+      padding-bottom: 0.3rem;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 1.5rem;
+    }
+
+    a.button {
+      display: inline-block;
+      text-decoration: none;
+      color: white;
+      background-color: #4caf50;
+      padding: 0.8rem 1.5rem;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    a.button:hover {
+      background-color: #388e3c;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #4caf50;
+      color: white;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Our papeer</h1>
-    <p>An advanced statistical framework for case study and individual variability analysis.</p>
+    <h1>Maternal Health Aggregated Trends Can Be Misleading</h1>
+    <p>The Power of N-of-1 Level Wearable Data Analysis for Personalized Pregnancy Monitoring</p>
   </header>
 
   <main>
     <section id="overview">
       <h2>Overview</h2>
-      <p>Maternal health aggregated vs individual level analysis</p>
+      <p>Aggregated data often masks individual variability, which can be critical for maternal health insights. This project focuses on N-of-1 analysis using wearable data to empower personalized pregnancy monitoring.</p>
     </section>
 
     <section id="features">
       <h2>Key Features</h2>
       <ul>
-        <li>Wearable data N-of-1 level analysis</li>
+        <li>Detailed case study analysis at an individual level</li>
+        <li>Insights derived from wearable health data</li>
+        <li>Advanced statistical modeling for personalized insights</li>
       </ul>
     </section>
 
     <section id="repository-link">
       <h2>Explore the Code</h2>
-      <p>To dive into the code and contribute, visit the official GitHub repository.</p>
+      <p>Want to learn more or contribute? Visit the official GitHub repository:</p>
       <a href="https://github.com/Tinbeh97/N-of-1-Level-Wearable-Data-Analysis" target="_blank" class="button">View GitHub Repository</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Cyclops Project by Vector Institute</p>
+    <p>&copy; 2025 by 4You&Me and UofT Groups. All rights reserved.</p>
   </footer>
 </body>
 </html>
