--- a/index.html
+++ b/index.html
@@ -7,20 +7,31 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <style>
+    /* Define CSS variables for easy customization */
+    :root {
+      --navbar-bg: linear-gradient(135deg, #004080, #002040);
+      --text-color: #f8f8f8;
+      --primary-bg: #f4f4f4;
+      --content-bg: #ffffff;
+      --button-bg: #004080;
+      --button-hover-bg: #002040;
+      --border-color: #cccccc;
+    }
+
     /* General Styling */
     body {
-      font-family: 'Georgia', serif;
+      font-family: 'Arial', sans-serif;
       line-height: 1.8;
       margin: 0;
       padding: 0;
-      color: #2c2c2c;
-      background-color: #f4f4f4;
+      color: #333;
+      background-color: var(--primary-bg);
     }
 
-    /* Header */
+    /* Header Styling */
     header {
-      background: linear-gradient(to bottom, #4a4a4a, #2c2c2c);
-      color: #e6e6e6;
+      background: var(--navbar-bg);
+      color: var(--text-color);
       padding: 2rem 1rem;
       text-align: center;
     }
@@ -31,18 +42,19 @@
     }
 
     header p {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       margin-top: 0.5rem;
     }
 
-    /* Main Section */
+    /* Main Content */
     main {
       padding: 2rem 1rem;
       max-width: 900px;
       margin: auto;
-      background: #ffffff;
+      background: var(--content-bg);
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
+      border: 1px solid var(--border-color);
     }
 
     section {
@@ -52,14 +64,10 @@
     section h2 {
       font-size: 1.8rem;
       margin-bottom: 1rem;
-      color: #4a4a4a;
-      border-bottom: 3px solid #9a9a9a;
+      color: #004080;
+      border-bottom: 3px solid #004080;
       display: inline-block;
       padding-bottom: 0.3rem;
-    }
-
-    section p {
-      margin-top: 1rem;
     }
 
     ul {
@@ -71,12 +79,12 @@
       margin-bottom: 0.5rem;
     }
 
-    /* Button */
+    /* Button Styling */
     a.button {
       display: inline-block;
       text-decoration: none;
-      color: #ffffff;
-      background-color: #4a4a4a;
+      color: var(--text-color);
+      background-color: var(--button-bg);
       padding: 0.8rem 1.5rem;
       border-radius: 5px;
       font-weight: bold;
@@ -84,16 +92,16 @@
     }
 
     a.button:hover {
-      background-color: #2c2c2c;
+      background-color: var(--button-hover-bg);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    /* Footer */
+    /* Footer Styling */
     footer {
       text-align: center;
       padding: 1rem;
-      background: #2c2c2c;
-      color: #e6e6e6;
+      background: var(--navbar-bg);
+      color: var(--text-color);
       margin-top: 2rem;
     }
 
