--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
   <main>
     <section id="overview">
       <h2>Overview</h2>
-      <p>Aggregated data often masks individual variability, which can be critical for maternal health insights. This project focuses on N-of-1 analysis using wearable data to empower personalized pregnancy monitoring.</p>
+      <p>Aggregated data often overlooks individual variability, which is crucial for maternal health insights. This work emphasizes N-of-1 analysis of wearable data to enable personalized pregnancy monitoring.</p>
     </section>
-
+    
     <section id="features">
       <h2>Key Features</h2>
       <ul>
-        <li>Detailed case study analysis at an individual level</li>
-        <li>Insights derived from wearable health data</li>
-        <li>Advanced statistical modeling for personalized insights</li>
+        <li>Comparison of aggregate physiological trends with individual patterns</li>
+        <li>In-depth case studies focused on individual-level analysis</li>
+        <li>Advanced statistical models for tailored insights</li>
       </ul>
     </section>
 
